Se modifico el index ademas la seccion de sobre nostros en la parte del css menu modal el apartado sobre nostros el stylo general se cambio el logo se corrigieron bugs y algunos metodos mal empleados a la hora de organizar el codigo manteniendo mas legible y organizado.

--- a/css/menu-modal.css
+++ b/css/menu-modal.css
@@ -7,12 +7,9 @@
 .menu-icon {
     display: flex;
     align-items: right;
-    flex-direction: column;
-    font-size: 28px;
     cursor: pointer;
     color: #FFF;
     margin: auto;
-    margin-right: 30px;
 }
 
 #menu-toggle:checked + .menu-modal {
@@ -66,7 +63,6 @@
 }
 
 .menu-links li{
-    
     margin: 10px 0px;
 }
 
